--- a/AppendixD/HypothesisTesting.ipynb
+++ b/AppendixD/HypothesisTesting.ipynb
@@ -165,6 +165,33 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "ab6a2b9e-c631-44e4-8b94-c68b1377504d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "W+ = 49.0, p-value = 0.0137\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.stats import wilcoxon\n",
+    "\n",
+    "# Accuracy values for algorithms A and B\n",
+    "A = [0.812, 0.784, 0.761, 0.803, 0.792, 0.765, 0.811, 0.774, 0.781, 0.798]\n",
+    "B = [0.826, 0.791, 0.755, 0.812, 0.805, 0.778, 0.809, 0.786, 0.775, 0.810]\n",
+    "\n",
+    "# Perform one-sided Wilcoxon signed-rank test (B > A)\n",
+    "statistic, p_value = wilcoxon(B, A, alternative='greater')\n",
+    "\n",
+    "print(f\"W+ = {statistic}, p-value = {p_value:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "8b8eb1e8-5701-49a0-8386-08928c29e828",
    "metadata": {},
    "outputs": [
