Reorganized some of the NumPy examples

--- a/AppendixF/NumPy/AggregationFunctions.ipynb
+++ b/AppendixF/NumPy/AggregationFunctions.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "f0b71706-2eaf-45e9-a724-927079ee8a55",
    "metadata": {},
    "outputs": [
@@ -49,8 +49,53 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2de34c1c-efb5-4029-a3f8-dc761c8d2a30",
+   "metadata": {},
+   "source": [
+    "Keepdims"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
+   "id": "002b1893-3b9f-4046-8c66-65fd79a63dc6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-1.5, -0.5,  0.5,  1.5],\n",
+       "       [-0.5, -0.5,  0.5,  0.5],\n",
+       "       [-7.5, -2.5,  2.5,  7.5]])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A = np.array([[1, 2, 3, 4],\n",
+    "              [5, 5, 6, 6],\n",
+    "              [0, 5, 10, 15]])\n",
+    "\n",
+    "row_means = A.mean(axis=1, keepdims=True)\n",
+    "centered = A - row_means\n",
+    "centered"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c26b71d0-70ca-4c7a-8636-9560f8fff25c",
+   "metadata": {},
+   "source": [
+    "Combining aggregations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "ad72c335-7455-4e2b-b835-33a0cd7a9660",
    "metadata": {},
    "outputs": [],
@@ -61,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "6f82c4ad-bbde-4c8a-a41e-bc6fba0fbce5",
    "metadata": {},
    "outputs": [
@@ -84,6 +129,33 @@
   },
   {
    "cell_type": "markdown",
+   "id": "bd1af031-ba81-4892-bfe0-86950dea3259",
+   "metadata": {},
+   "source": [
+    "Detecting Missing Values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "d627c247-fff5-4ff6-b5f9-9b4d2b2d6080",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[False False  True False]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = np.array([1, 2, np.nan, 4])\n",
+    "print(np.isnan(x))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c32bb18b-8908-4c5c-b931-786ac760fbf2",
    "metadata": {},
    "source": [
@@ -92,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "id": "0188c5af-940a-457d-a3be-fb26434ba451",
    "metadata": {},
    "outputs": [
