--- a/AppendixF/NumPy/UniversalFunctions.ipynb
+++ b/AppendixF/NumPy/UniversalFunctions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "658d8543-64ef-47db-ac47-3f5a571d59b6",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "2295b290-6453-423f-93a1-092d5620acff",
    "metadata": {},
    "outputs": [
@@ -22,7 +22,7 @@
        "array([5, 7, 9])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "7dad1d08-ed90-4f80-97b5-6796904e56fa",
    "metadata": {},
    "outputs": [
@@ -46,7 +46,7 @@
        "array([5, 7, 9])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "23a3f28f-7d00-4ccc-ae55-58e0cf1d3486",
    "metadata": {},
    "outputs": [
@@ -67,7 +67,7 @@
        "array([5, 7, 9])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "090602bb-78ca-441f-acc6-0278ffe3453b",
    "metadata": {},
    "outputs": [
@@ -96,8 +96,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.29 ms ± 112 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
-      "270 ms ± 16.1 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "2.51 ms ± 186 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
+      "327 ms ± 13.9 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "id": "2de37f15-6c5e-4386-871a-ab636afbbeb1",
    "metadata": {},
    "outputs": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "id": "5d7f7b3f-bdb8-45ca-837d-ff1320eff297",
    "metadata": {},
    "outputs": [
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "id": "8ae365f9-e371-4f44-92f2-c4137ddcd318",
    "metadata": {},
    "outputs": [
@@ -203,6 +203,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "5c80b708-82b5-4217-accc-7f7791b9c5fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.allclose(a, b)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "2ea75ae4-df25-4c6d-ab9b-49c3774bee39",
    "metadata": {},
@@ -212,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "2c8de814-3596-463e-8d40-8be6bb6687dc",
    "metadata": {},
    "outputs": [
@@ -245,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "4ccb01a9-99ed-42e9-81cc-1a345c4da2cc",
    "metadata": {},
    "outputs": [
@@ -281,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "90224ee7-ddd9-4914-9b0c-baca3ac80dd6",
    "metadata": {},
    "outputs": [
@@ -308,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "4a18cb13-ac4b-4c32-9f24-ccca707529ea",
    "metadata": {},
    "outputs": [
@@ -338,9 +359,68 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e61cc7df-329e-4080-b3d7-3c7a6b5687f2",
+   "metadata": {},
+   "source": [
+    "Set Functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "b9c1a424-b44d-4231-9cae-f0dba045d436",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4]\n",
+      "[3 4]\n",
+      "[1 2 3 4 5 6]\n",
+      "[False False False  True  True]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = np.array([1, 2, 2, 3, 4])\n",
+    "y = np.array([3, 4, 4, 5, 6])\n",
+    "\n",
+    "print(np.unique(x))\n",
+    "print(np.intersect1d(x, y))\n",
+    "print(np.union1d(x, y))\n",
+    "print(np.isin(x, y))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "8929e700-afdc-4a9a-b688-870cb64ad5bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Values: [1 2 4 5]\n",
+      "Counts: [3 2 1 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = np.array([4, 1, 2, 1, 5, 2, 1])\n",
+    "\n",
+    "values, counts = np.unique(x, return_counts=True)\n",
+    "\n",
+    "print(\"Values:\", values)\n",
+    "print(\"Counts:\", counts)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa2182e8-8732-470b-b3d5-55a82c6c2729",
+   "id": "d987b2e5-1e08-4a3f-80b7-42a4aa257caf",
    "metadata": {},
    "outputs": [],
    "source": []
