--- a/AppendixF/NumPy/ArrayManipulation.ipynb
+++ b/AppendixF/NumPy/ArrayManipulation.ipynb
@@ -12,6 +12,127 @@
   },
   {
    "cell_type": "markdown",
+   "id": "bfbf0541-5d96-437b-9d88-8705ce2bdf25",
+   "metadata": {},
+   "source": [
+    "Sorting Arrays"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "ef2242bc-adc9-439e-8a11-682ff16e75a6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4 5]\n",
+      "[3 1 4 2 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = np.array([3, 1, 4, 2, 5])\n",
+    "print(np.sort(x))  # Create a new sorted array\n",
+    "print(x)  # Original unchanged"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "675355f6-af71-4e02-bce1-74c576a60f71",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x.sort()  # Sort in place\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "21f9e0db-b63c-428a-b743-1a43c450823c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[2 1 0]\n",
+      " [3 5 4]]\n",
+      "[[1 3 4]\n",
+      " [0 2 5]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = np.array([[3, 1, 4],\n",
+    "              [2, 5, 0]])\n",
+    "\n",
+    "print(np.sort(A, axis=0))  # Sort each column\n",
+    "print(np.sort(A, axis=1))  # Sort each row"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "977677dc-695c-45f5-92c3-75cd2e21ca8a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 0 1]\n",
+      " [0 1 0]]\n",
+      "[[1 0 2]\n",
+      " [2 0 1]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = np.array([[3, 1, 4],\n",
+    "              [2, 5, 0]])\n",
+    "\n",
+    "print(np.argsort(A, axis=0))  # indices to sort each column\n",
+    "print(np.argsort(A, axis=1))  # indices to sort each row"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "7e8cbfd6-4a4f-4757-a9d7-670233502942",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2 2 3 5]\n",
+      "['b' 'd' 'c' 'a']\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = np.array([5, 2, 3, 2])\n",
+    "labels = np.array(['a', 'b', 'c', 'd'])  # Associate labels with each element\n",
+    "indices = np.argsort(x, kind='mergesort')\n",
+    "print(x[indices])       # Sorted values\n",
+    "print(labels[indices])  # Corresponding original labels"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a3caa9f3-de80-43cf-9cf8-952fc686e73e",
    "metadata": {},
    "source": [
@@ -20,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "379cbc94-1d32-46d3-ad51-0465e0693f73",
    "metadata": {},
    "outputs": [
@@ -32,7 +153,7 @@
        "       [5, 6]])"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "c648aa47-b079-483a-8cad-248508b14371",
    "metadata": {},
    "outputs": [
@@ -58,7 +179,7 @@
        "       [5, 6]])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "81758814-4d69-4700-8352-f89fef833145",
    "metadata": {},
    "outputs": [
@@ -83,7 +204,7 @@
        "       [2, 4]])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -97,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "508614e7-e487-448e-8cc0-74e267a339c9",
    "metadata": {},
    "outputs": [
@@ -108,7 +229,7 @@
        "       [2, 4]])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "id": "3fb0b8f8-50bf-4756-9fb7-5e2433780311",
    "metadata": {},
    "outputs": [
@@ -132,7 +253,7 @@
        "array([1, 2, 3, 4])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "5e7dab8a-ece5-46d0-a4ed-db8e553da1b1",
    "metadata": {},
    "outputs": [
@@ -154,7 +275,7 @@
        "       [2, 4]])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "id": "1b6b37b4-8272-4449-b6b8-92cb436b86a0",
    "metadata": {},
    "outputs": [
@@ -179,7 +300,7 @@
        "       [2, 4]])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "id": "e663818c-32a7-47fc-98c8-8742ff148492",
    "metadata": {},
    "outputs": [
@@ -205,7 +326,7 @@
        "       [3, 0]])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "id": "41849900-a474-4ad1-8765-cb8cec044303",
    "metadata": {},
    "outputs": [
@@ -237,7 +358,7 @@
        "        [7, 8]])]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "id": "c7170bf1-d694-4905-83f2-43d61249a1bb",
    "metadata": {},
    "outputs": [
@@ -266,7 +387,7 @@
        "        [8]])]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "id": "27da1688-c33a-4a04-adc7-e01107eaa816",
    "metadata": {},
    "outputs": [
@@ -287,7 +408,7 @@
        "[array([[1, 2, 3, 4]]), array([[5, 6, 7, 8]])]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "id": "6b8daf4a-e072-48ba-9a00-2cf10dee3f89",
    "metadata": {},
    "outputs": [
@@ -311,7 +432,7 @@
        "        [7, 8]])]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "id": "36e49e7a-e38a-4d80-b4eb-f5aa733201d3",
    "metadata": {},
    "outputs": [
@@ -342,7 +463,7 @@
        "       [5, 6]])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "id": "3a55b4e7-85d4-44ff-9b73-41f277a49455",
    "metadata": {},
    "outputs": [
@@ -367,7 +488,7 @@
        "       [3, 4]])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "id": "b4611c8e-4f32-471d-9939-5e30440a223f",
    "metadata": {},
    "outputs": [
@@ -389,7 +510,7 @@
        "       [4]])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -408,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "id": "cc65605b-43a3-48ee-a7f5-a71c7639348d",
    "metadata": {},
    "outputs": [
@@ -418,7 +539,7 @@
        "array([1, 1, 2, 2, 3, 3])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "id": "586e2400-5efd-48e4-81cf-c55cd7840a1b",
    "metadata": {},
    "outputs": [
@@ -440,7 +561,7 @@
        "array([1, 2, 2, 3, 3, 3])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "id": "7bec1e86-0332-40cf-90de-b21fbb9284fe",
    "metadata": {},
    "outputs": [
@@ -461,7 +582,7 @@
        "array([1, 2, 3, 1, 2, 3])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "id": "499680e2-62f0-4906-9e20-6ade0b413997",
    "metadata": {},
    "outputs": [
@@ -485,7 +606,7 @@
        "       [3, 4, 3, 4, 3, 4]])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "id": "fe29eee5-72c0-42b3-ad16-47e244edb4ca",
    "metadata": {},
    "outputs": [
@@ -517,7 +638,7 @@
        "       [5, 6]])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -530,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "id": "e5e1ffbf-8c06-4ec9-8e9c-48e12668ae16",
    "metadata": {},
    "outputs": [
@@ -541,7 +662,7 @@
        "       [6, 5, 4]])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -552,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
    "id": "8afafa21-9c7a-4e0a-834b-609349a603ec",
    "metadata": {},
    "outputs": [
@@ -563,7 +684,7 @@
        "       [1, 2, 3]])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -574,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
    "id": "72283060-6751-42e6-b3ce-524092a21f57",
    "metadata": {},
    "outputs": [
@@ -586,7 +707,7 @@
        "       [3, 6]])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -597,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 30,
    "id": "0dc89092-e9ba-4ed7-a2f4-8f7b52a7f9a8",
    "metadata": {},
    "outputs": [
@@ -614,7 +735,7 @@
        "        [1., 1., 1., 1.]]])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -634,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 31,
    "id": "ec871914-59ee-43c1-807d-8438a2450ec1",
    "metadata": {},
    "outputs": [
@@ -644,7 +765,7 @@
        "(3,)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -656,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 32,
    "id": "01a2bd01-4a27-4d91-b763-062148c027c2",
    "metadata": {},
    "outputs": [
@@ -666,7 +787,7 @@
        "array([[1, 2, 3]])"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -677,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 33,
    "id": "ee96902f-7ac9-42ad-a668-8591808fcd1d",
    "metadata": {},
    "outputs": [
@@ -689,7 +810,7 @@
        "       [3]])"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -700,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 34,
    "id": "8aaa7925-7657-4c95-a674-87650af1956e",
    "metadata": {},
    "outputs": [
@@ -710,7 +831,7 @@
        "array([1, 2, 3])"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
