Added log scaling example to matplotlib and date handling to pandas

--- a/AppendixF/Pandas/LoadingData.ipynb
+++ b/AppendixF/Pandas/LoadingData.ipynb
@@ -35,6 +35,61 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "e6dc712f-5b25-4b15-9978-21150dfa4d52",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  checking_status  duration                    credit_history  \\\n",
+      "0            '<0'         6  'critical/other existing credit'   \n",
+      "1      '0<=X<200'        48                   'existing paid'   \n",
+      "2   'no checking'        12  'critical/other existing credit'   \n",
+      "3            '<0'        42                   'existing paid'   \n",
+      "4            '<0'        24              'delayed previously'   \n",
+      "\n",
+      "               purpose  credit_amount      savings_status employment  \\\n",
+      "0             radio/tv           1169  'no known savings'      '>=7'   \n",
+      "1             radio/tv           5951              '<100'   '1<=X<4'   \n",
+      "2            education           2096              '<100'   '4<=X<7'   \n",
+      "3  furniture/equipment           7882              '<100'   '4<=X<7'   \n",
+      "4            'new car'           4870              '<100'   '1<=X<4'   \n",
+      "\n",
+      "   installment_commitment       personal_status other_parties  ...  \\\n",
+      "0                       4         'male single'          none  ...   \n",
+      "1                       2  'female div/dep/mar'          none  ...   \n",
+      "2                       2         'male single'          none  ...   \n",
+      "3                       2         'male single'     guarantor  ...   \n",
+      "4                       3         'male single'          none  ...   \n",
+      "\n",
+      "    property_magnitude age  other_payment_plans     housing existing_credits  \\\n",
+      "0        'real estate'  67                 none         own                2   \n",
+      "1        'real estate'  22                 none         own                1   \n",
+      "2        'real estate'  49                 none         own                1   \n",
+      "3     'life insurance'  45                 none  'for free'                1   \n",
+      "4  'no known property'  53                 none  'for free'                2   \n",
+      "\n",
+      "                    job num_dependents  own_telephone foreign_worker class  \n",
+      "0               skilled              1            yes            yes  good  \n",
+      "1               skilled              1           none            yes   bad  \n",
+      "2  'unskilled resident'              2           none            yes  good  \n",
+      "3               skilled              2           none            yes  good  \n",
+      "4               skilled              2           none            yes   bad  \n",
+      "\n",
+      "[5 rows x 21 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "url = 'https://www.openml.org/data/get_csv/31/dataset_31_bank.csv'\n",
+    "df = pd.read_csv(url)\n",
+    "print(df.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "3b5136fc-05be-4e8d-8464-798458c45e3c",
    "metadata": {},
    "outputs": [
@@ -56,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "d2bce4e7-ca82-454d-874b-cf1e1ece0e1a",
    "metadata": {},
    "outputs": [
@@ -78,25 +133,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "44563bba-f383-4079-942b-dfcd607607ca",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Enter password:  ········\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Connected successfully!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sqlalchemy import create_engine\n",
     "from getpass import getpass\n",
