--- a/AppendixF/Pandas/Series.ipynb
+++ b/AppendixF/Pandas/Series.ipynb
@@ -392,9 +392,45 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "805096b6-e64e-4737-9f39-361bd01d6195",
+   "metadata": {},
+   "source": [
+    "Index Alignment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "2470170f-1ea3-4752-853c-eef439cf4eb3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "w     NaN\n",
+       "x     NaN\n",
+       "y    21.0\n",
+       "z    32.0\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s1 = pd.Series([10, 20, 30], index=['x', 'y', 'z'])\n",
+    "s2 = pd.Series([1, 2, 3], index=['y', 'z', 'w'])\n",
+    "\n",
+    "s1 + s2"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2470170f-1ea3-4752-853c-eef439cf4eb3",
+   "id": "6bc8539f-a381-40e3-b307-796bbbd542c7",
    "metadata": {},
    "outputs": [],
    "source": []
