Updated figures in Appendix D

--- a/AppendixD/BootstrapMethod.ipynb
+++ b/AppendixD/BootstrapMethod.ipynb
@@ -82,7 +82,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Bootstrap p-value: 0.489\n"
+      "Sample mean: 83.800\n",
+      "Observed statistic: 1.800\n",
+      "Bootstrap p-value: 0.297\n"
      ]
     }
    ],
@@ -90,24 +92,26 @@
     "np.random.seed(42)\n",
     "\n",
     "data = np.array([78, 85, 92, 88, 75, 83, 91, 79, 87, 80])\n",
-    "mu_0 = 85\n",
-    "B = 1000\n",
+    "mu_0 = 82\n",
+    "B = 10000\n",
     "\n",
-    "# Observed test statistic\n",
+    "# Compute the observed value of the statistic\n",
     "x_bar = np.mean(data)\n",
-    "T_obs = abs(x_bar - mu_0)\n",
+    "print(f\"Sample mean: {x_bar:.3f}\")\n",
+    "q = abs(x_bar - mu_0)\n",
+    "print(f\"Observed statistic: {q:.3f}\")\n",
     "\n",
-    "# Null-centered data\n",
-    "data_null = data - x_bar + mu_0\n",
+    "# Adjust data to satisfy H0 (mean = mu_0)\n",
+    "data_H0 = data - x_bar + mu_0\n",
     "\n",
-    "# Bootstrap test statistics\n",
-    "boot_stats = np.array([\n",
-    "    abs(np.mean(np.random.choice(data_null, size=len(data_null), replace=True)) - mu_0)\n",
+    "# Generate bootstrap replicates of the statistic under H0\n",
+    "Q_star = np.array([\n",
+    "    abs(np.mean(np.random.choice(data_H0, size=len(data_H0), replace=True)) - mu_0)\n",
     "    for _ in range(B)\n",
     "])\n",
     "\n",
     "# Compute p-value\n",
-    "p_value = np.mean(boot_stats >= T_obs)\n",
+    "p_value = np.mean(Q_star >= q)\n",
     "print(f\"Bootstrap p-value: {p_value:.3f}\")"
    ]
   },
